# PyObjectInterface

./: LICENSE  MANIFEST.in  README.md  main.py  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python-publish.yml  tests.yml
PyObjectInterface/: WebController.py  __init__.py  web_controller.tpl.html
PyObjectInterface/examples/: example.py  robot.py
tests/: test_example.py  test_poi.py
