[metadata]
name = PyObjectInterface
description = Create a web interface to interact with a class
author = Robert Nies
license = MIT
license_file = LICENSE
url = https://github.com/RobertJN64/PyObjectInterface
author_email = robertjnies@gmail.com
version = 0.0.2
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
packages = PyObjectInterface
python_requires = >=3.8
include_package_data = True
install_requires =
    typing_extensions
    flask