[metadata]
name = PyObjectInterface
description = Create a web interface to interact with a class
author = Robert Nies
license = MIT
license_file = LICENSE
url = https://github.com/RobertJN64/PyObjectInterface
author_email = robertjnies@gmail.com
version = 0.1.3
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    Programming Language :: Python :: 3.14

[options]
packages = PyObjectInterface
python_requires = >=3.10
include_package_data = True
install_requires =
    typing_extensions
    flask